--- a/templates/servers/__addServerModal.html.twig
+++ b/templates/servers/__addServerModal.html.twig
@@ -9,33 +9,28 @@
         </div>
         <div class="modal-body">
             {{ form_start(form) }}
-            {{ form_row(form.url) }}
-            <input id="jwtServer" type="checkbox" name="jwtServer" value="jwtServer" {% if server.appId %}checked{% endif %}>
-            <label for="jwtServer"> {{ 'Server ID und Secret anzeigen'|trans }}</label><br>
-            <div id="appId" class="collapse {% if server.appId %}show{% endif %}">
-                {{ form_row(form.appId) }}
-                {{ form_row(form.appSecret) }}
-            </div>
-            {{ form_row(form.licenseKey) }}
-            {% if not server|validateLicense %}
-            <p><small><span class="badge badge-danger">Enterprise</span><a target="_blank" href="https://h2-invent.com/produkte/jitsi-admin-enterprise"> {% trans %}Geben Sie hier ihren Pro-Lizenkey ein, wenn sie einen solchen erworben haben. Erfahren Sie hier mehr über Jitsi-Admin Enterprise.{% endtrans %}</a></small></p>
-            {% else %}
-                <p><small><span class="badge badge-success">{{ 'Enterprise bis'|trans }}</span> {{ server|validateUntilLicense|date('d.m.Y') }}</small></p>
-            {% endif %}
-            <div class="mb-2">
-                <a data-toggle="collapse" class=" caretdown" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    {{ 'Erweiterte Optionen'|trans }}
-                </a>
-                <div class="collapse" id="collapseExample">
-                    <div class="mt-3">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                {{ form_row(form.featureEnableByJWT) }}
-                            </div>
-                        </div>
-                    </div>
+            {{ form_row(form.name) }}
+            <div class="row">
+                <div class="col-md-8">
+                    {{ form_row(form.street) }}
+                </div>
+                <div class="col-md-4">
+                    {{ form_row(form.number) }}
                 </div>
             </div>
+
+
+            {{ form_row(form.plz) }}
+            {{ form_row(form.city) }}
+            {{ form_row(form.directions) }}
+
+            {{ form_row(form.licenseKey) }}
+            {% if not standort|validateLicense %}
+            <p><small><span class="badge badge-danger">Enterprise</span><a target="_blank" href="https://h2-invent.com/produkte/jitsi-admin-enterprise"> {% trans %}Geben Sie hier ihren Pro-Lizenkey ein, wenn sie einen solchen erworben haben. Erfahren Sie hier mehr über Jitsi-Admin Enterprise.{% endtrans %}</a></small></p>
+            {% else %}
+                <p><small><span class="badge badge-success">{{ 'Enterprise bis'|trans }}</span> {{ standort|validateUntilLicense|date('d.m.Y') }}</small></p>
+            {% endif %}
+
             {{ form_row(form.submit) }}
             {{ form_end(form) }}
         </div>
