--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -103,7 +103,7 @@
                 {% elseif todayRooms |length == 0 %}
                     <h4 style="padding-top: 16px" class="h4-responsive pl-xl-3">{{ 'Heute'|trans }} </h4>
                     <div class="card card-body">
-                        <p class="text-center">{{ 'Heute steht keine Events an.'|trans }}</p>
+                        <p class="text-center">{{ 'Heute steht keine Event an.'|trans }}</p>
                     </div>
                 {% endif %}
                 {% set locale =  app.request.locale %}
