--- a/templates/base/__addressBookModal.html.twig
+++ b/templates/base/__addressBookModal.html.twig
@@ -28,9 +28,9 @@
                                     </a>
                                     <div class="dropdown-menu">
 
-                                         {% for s in servers %}
+                                         {% for s in standort %}
                                              <a class="dropdown-item confirmHref" data-text="{{ 'Wollen Sie mit diesem Teilnehmer eine Konferenz starten'|trans }}"
-                                                    href="{{ path('add_hoc_meeting',{'serverId':s.id,'userId':u.id}) }}">{{ s.url }}</a>
+                                                    href="{{ path('add_hoc_meeting',{'serverId':s.id,'userId':u.id}) }}">{{ s.name }}</a>
 
                                          {% endfor %}
                                     </div>
