--- a/templates/base/__newRoomModal.html.twig
+++ b/templates/base/__newRoomModal.html.twig
@@ -11,7 +11,7 @@
             {{ form_start(form) }}
             <div class="row">
                 <div class="col-lg-12">
-                    {{ form_row(form.server) }}
+                    {{ form_row(form.standort) }}
                 </div>
                 <div class="col-lg-12">
                     {{ form_row(form.name) }}
