--- a/templates/email/addUser.html.twig
+++ b/templates/email/addUser.html.twig
@@ -1,6 +1,6 @@
 {% extends 'email/base.html.twig' %}
 {% block header %}
-    - -{{'Einladung zur Videokonferenz'|trans}}- -
+    - -{{'Einladung zu einem Event'|trans}}- -
 {% endblock %}
 
 {% block content %}
@@ -11,7 +11,7 @@
         {{'Hallo!'|trans}}
     </b>
     <p>
-        {% trans with {'{url}': room.server.url} %}Sie wurden gerade zu einer Videokonferenz auf dem Jitsi Server {url} eingeladen. Über den beigefügten Link können Sie ganz einfach zur Videokonferenz beitreten.{% endtrans %}
+        {% trans with {'{name}': room.standort.name} %}Sie wurden gerade zu einem Event in: {name} eingeladen.{% endtrans %}
     </p>
    {% include 'email/__roomInfo.html.twig' %}
 {% endblock %}
