--- a/templates/email/removeRoom.html.twig
+++ b/templates/email/removeRoom.html.twig
@@ -1,6 +1,6 @@
 {% extends 'email/base.html.twig' %}
 {% block header %}
-    -- {{ 'Videokonferenz abgesagt'|trans }} --
+    -- {{ 'Event abgesagt'|trans }} --
 {% endblock %}
 
 {% block content %}
