--- a/templates/email/editRoom.html.twig
+++ b/templates/email/editRoom.html.twig
@@ -1,6 +1,6 @@
 {% extends 'email/base.html.twig' %}
 {% block header %}
-    -- {{ 'Videokonferenz bearbeitet'|trans }} --
+    -- {{ 'Event bearbeitet'|trans }} --
 {% endblock %}
 
 {% block content %}
@@ -11,7 +11,7 @@
         {{'Hallo!'|trans}}
     </b>
     <p>
-      {% trans with {'{name}': room.name} %}  Die Veranstaltung {name} wurde gerade geändert. Über den beigefügten Link können Sie ganz einfach zur Videokonferenz beitreten.{% endtrans %}
+      {% trans with {'{name}': room.name} %}  Das Event {name} wurde gerade geändert. Über den beigefügten Link können Sie ganz einfach zur Videokonferenz beitreten.{% endtrans %}
     </p>
     {% include 'email/__roomInfo.html.twig' %}
 
