--- a/templates/email/rememberUser.html.twig
+++ b/templates/email/rememberUser.html.twig
@@ -1,6 +1,6 @@
 {% extends 'email/base.html.twig' %}
 {% block header %}
-    -- {{ 'Erinnerung zur Videokonferenz'|trans }} --
+    -- {{ 'Erinnerung zu einem Event'|trans }} --
 {% endblock %}
 
 {% block content %}
@@ -11,7 +11,7 @@
         {{'Hallo!'|trans}}
     </b>
     <p>
-        {% trans with {'{url}' : room.server.url} %}Die Videokonferenz auf dem Server {url} startet gleich. Über den beigefügten Link können Sie ganz einfach zur Videokonferenz beitreten.{% endtrans %}
+        {% trans with {'{name}' : room.name} %}Das Event: {name} startet gleich. {% endtrans %}
     </p>
     {% include 'email/__roomInfo.html.twig' %}
 
