--- a/templates/email/scheduleMeeting.html.twig
+++ b/templates/email/scheduleMeeting.html.twig
@@ -11,7 +11,7 @@
         {{'Hallo!'|trans}}
     </b>
     <p>
-        {% trans with {'{url}': room.server.url} %}Sie wurden gerade zu einer Terminplanung auf dem Jitsi Server {url} eingeladen. Über den beigefügten Link können Sie ganz einfach Ihren Wunschtermin aussuchen.{% endtrans %}
+        {% trans with {'{name}': room.name} %}Sie wurden gerade zu der Terminplanung: {name} eingeladen. Über den beigefügten Link können Sie ganz einfach Ihren Wunschtermin aussuchen.{% endtrans %}
     </p>
     <b>
         {{ 'Name'|trans }}: {{ room.name }}
@@ -32,8 +32,8 @@
     </p>
 
     <p>
-        {% if server is defined and  server is not null and server|validateLicense and server.serverEmailBody is not null %}
-            {{ server.serverEmailBody|nl2br }}
+        {% if standort is defined and  standort is not null and standort|validateLicense and standort.serverEmailBody is not null %}
+            {{ standort.serverEmailBody|nl2br }}
         {% endif %}
     </p>
 
