--- a/templates/email/serverPermission.html.twig
+++ b/templates/email/serverPermission.html.twig
@@ -1,24 +1,24 @@
 {% extends 'email/base.html.twig' %}
 {% block header %}
-    -- {{ server.url }} --
+    -- {{ standort.name }} --
 {% endblock %}
 
 {% block content %}
     <h4 class="text-center">
-        {% trans with {'{url}':server.url } %}Sie können jetzt Konferenzen mit dem Jitsi Server {url} erstellen{% endtrans %}
+        {% trans with {'{name}':standort.name } %}Sie können jetzt Events an dem Standort: {name} erstellen{% endtrans %}
     </h4>
     <b>
         {{'Hallo!'|trans}}
     </b>
     <p>
-        {{'Sie können nun Jitsi Meet Konferenzen über den Jitsi Admin verwalten. Loggen Sie sich ein oder erstellen Sie
+        {{'Sie können nun Events über den Open-Event-Manager verwalten. Loggen Sie sich ein oder erstellen Sie
         sich einen Benutzer.'|trans}}
     </p>
     <b>
-        {{ 'Login'|trans }}: <a href="{{ absolute_url(path('dashboard')) }}">Jitsi Admin</a><br>
-        Jitsi Admin: <a href="{{ absolute_url(path('index')) }}">Jitsi Admin start</a>
+        {{ 'Login'|trans }}: <a href="{{ absolute_url(path('dashboard')) }}">Open-Event-Manager</a><br>
+        Open-Event-Manager: <a href="{{ absolute_url(path('index')) }}">Open-Event-Manager start</a>
     </b>
     <spacer size="16"></spacer>
-    <p>{{ 'Server Administrator'|trans }}: {{ server.administrator.firstName }} {{ server.administrator.lastName }}</p>
+    <p>{{ 'Server Administrator'|trans }}: {{ standort.administrator.firstName }} {{ standort.administrator.lastName }}</p>
     <spacer size="16"></spacer>
 {% endblock %}
