* self subscription is working * waiting list is working * sheduling is working

--- a/templates/email/subscriptionToRoom.html.twig
+++ b/templates/email/subscriptionToRoom.html.twig
@@ -12,7 +12,7 @@
     </b>
     <p>
         {% trans with {'{name}': room.name|escape} %}
-            Sie haben sich zur Konferenz {name} angemeldet.
+            Sie haben sich zum Event {name} angemeldet.
         {% endtrans %}
     </p>
     <p>
