--- a/templates/schedule/schedulePublic.html.twig
+++ b/templates/schedule/schedulePublic.html.twig
@@ -62,7 +62,7 @@
         </div>
         <div class="row form-group">
             <div class="col-12">
-                {{ include('join/__datenschutz.html.twig',{'server':server,'dataPrivacy':dataPrivacy}) }}
+                {{ include('join/__datenschutz.html.twig',{'server':standort,'dataPrivacy':dataPrivacy}) }}
             </div>
         </div>
         </div>
