--- a/templates/share_link/subscribe.html.twig
+++ b/templates/share_link/subscribe.html.twig
@@ -33,7 +33,7 @@
             <div class="row form-group">
 
                 <div class="col-12">
-                    {{ include('join/__datenschutz.html.twig',{'server':server,'dataPrivacy':dataPrivacy}) }}
+                    {{ include('join/__datenschutz.html.twig',{'standort':standort,'dataPrivacy':dataPrivacy}) }}
 
                 </div>
             </div>
