--- a/templates/join/base.html.twig
+++ b/templates/join/base.html.twig
@@ -85,9 +85,9 @@
 
                             <div class="row">
                                 <div class="col-12 text-center">
-                                    {% if not server %}
+                                    {% if not standort %}
                                         <p>
-                                            {% trans %}Wer eine datenschutzfreundliche Videokonferenz Plattform sucht die auf dem eigenen Server betrieben wird ist mit dem Open Source Tool Jitsi gut bedient. Jitsi ist eine Alternative zu Zoom. Sie speichert keine Nutzerdaten und ermöglicht die verschlüsselte Anwendung.{% endtrans %}
+                                            {% trans %}Wer eine datenschutzfreundliche Event-Manager Software benötigt, kommt um den Open Event-Manager nicht herum{% endtrans %}
                                         </p>
                                     {% endif %}
                                 </div>
@@ -119,16 +119,16 @@
                         </div>
                     </div>
                 </div>
-                {% if server and server|roomsinFuture|length > 0 %}
+                {% if standort and standort|roomsinFuture|length > 0 %}
                     <div class="col-lg-10 mt-3">
                         <div class="card frozenGlas">
                             <div class="glossy"></div>
                             <div class="card-body">
-                                <h3 class="h3-responsive text-center">{{ 'Öffentliche Konferenzen'|trans }}</h3>
+                                <h3 class="h3-responsive text-center">{{ 'Öffentliche Events'|trans }}</h3>
                                 <div class="max-vh60">
                                     <ul class="list-group">
 
-                                        {% for r in server|roomsinFuture %}
+                                        {% for r in standort|roomsinFuture %}
                                             <li class="list-group-item d-flex align-items-center justify-content-between">
                                                 <b>{{ r.start|date('d.m.Y | H:i') }}</b>
                                                 <h5>{{ r.name }} <a tabindex="0" data-toggle="popover"
@@ -164,7 +164,7 @@
                     <div class="row">
                         <div class="col-md-3 text-md-left">
 
-                            {% if server is defined and  server is not null and server|validateLicense %}
+                            {% if standort is defined and  standort is not null and standort|validateLicense %}
 
                             {% else %}
                                 <a href="https://jitsi-admin.de" target="_blank" class="small"><img
