--- a/templates/email/waitingList.html.twig
+++ b/templates/email/waitingList.html.twig
@@ -12,7 +12,7 @@
     </b>
     <p>
         {% trans with {'{name}': room.name|escape} %}
-            Sie sind auf der Warteliste für die Konferenz {name} eingetragen.
+            Sie sind auf der Warteliste für das Event {name} eingetragen.
         {% endtrans %}
     </p>
     <p>
