--- a/templates/schedule/index.html.twig
+++ b/templates/schedule/index.html.twig
@@ -48,7 +48,7 @@
                                                         class="fa fa-info-circle"></i></a></p>
                                         <a href="{{ path('schedule_admin_choose',{'id':s.id}) }}"
                                                                                                                    class="btn btn-sm btn-outline-success m-0 px-3 py-2 z-depth-0 waves-effect confirmHref"
-                                                                                                                   data-text="{{ 'Wollen Sie diese Terminplanung in eine Konferenz umwandeln?'|trans }}">
+                                                                                                                   data-text="{{ 'Wollen Sie diese Terminplanung in ein Event umwandeln?'|trans }}">
                                             <i class="fa fa-check"></i></a>
                                         <button class="btn btn-sm btn-outline-danger m-0 px-3 py-2 z-depth-0 waves-effect removeSchedule"
                                                 type="button" data-reload="{{ path('schedule_admin',{'id':room.id}) }}"
