--- a/templates/base/__addressBookModal.html.twig
+++ b/templates/base/__addressBookModal.html.twig
@@ -29,7 +29,7 @@
                                     <div class="dropdown-menu">
 
                                          {% for s in standort %}
-                                             <a class="dropdown-item confirmHref" data-text="{{ 'Wollen Sie mit diesem Teilnehmer eine Konferenz starten'|trans }}"
+                                             <a class="dropdown-item confirmHref" data-text="{{ 'Wollen Sie mit diesem Teilnehmer ein Event starten'|trans }}"
                                                     href="{{ path('add_hoc_meeting',{'serverId':s.id,'userId':u.id}) }}">{{ s.name }}</a>
 
                                          {% endfor %}
