--- a/templates/base/__head.html.twig
+++ b/templates/base/__head.html.twig
@@ -6,7 +6,7 @@
     <link rel="manifest" href="{{asset('site.webmanifest')}}">
 
     {% block title %}
-        <title>Jitsi Konferenz Manager</title>
+        <title>Open Event Manager</title>
     {% endblock %}
 
 {% if  app.environment == 'prod' %}
