--- a/templates/room/attendeeModal.twig
+++ b/templates/room/attendeeModal.twig
@@ -88,7 +88,7 @@
                         <li>{{ w.user.email }}
                             <a class="small directSend"
                                                    href="{{ path('accept_waitingList',{'id':w.id}) }}"
-                                                   data-text="{{ 'Wollen Sie den Teilnehmer wirklich zur Konferenz hinzufügen'|trans }}"
+                                                   data-text="{{ 'Wollen Sie den Teilnehmer wirklich zu dem Event hinzufügen'|trans }}"
                                                    data-target="#atendeeList"
                                                    data-url="{{ path('room_add_user',{'room':room.id}) }}"
                             ><i class="fa fa-check"></i>
