--- a/templates/servers/__addServerModal.html.twig
+++ b/templates/servers/__addServerModal.html.twig
@@ -10,6 +10,7 @@
         <div class="modal-body">
             {{ form_start(form) }}
             {{ form_row(form.name) }}
+            {{ form_row(form.roomnumber) }}
             <div class="row">
                 <div class="col-md-8">
                     {{ form_row(form.street) }}
