* add new Logo * bugfix waitinglist * joinpage redifined

--- a/assets/css/helper/_variables.scss
+++ b/assets/css/helper/_variables.scss
@@ -9,3 +9,17 @@ $contrast-dark: rgb(23, 21, 18);
 $contrast-light: rgb(144, 142, 140);
 $contrast-extra-light: rgb(255, 255, 255);
 $contrast-white: rgb(253, 253, 253);
+$black_background : #0d1117;
+$black_background_active : #2d3443;
+$black_navbar: #161b22;
+$black_font-color:#c9d1d9;
+$black_modal: #202529;
+$black_link-color: #58a6ff;
+$btn-primary: #2ea44f;
+$black_background : #0d1117;
+$black_background_active : #2d3443;
+$black_navbar: #161b22;
+$black_font-color:#c9d1d9;
+$black_modal_header: #003c60;
+$black_modal: #232530;
+$black_link-color: #58a6ff;
