--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
 <!-- Dark Overlay element -->
 <div class="overlay"></div>
 <script>
-
+    var bbbUrl = "{{ laf_bbb_Url }}";
     var notificationUrl = "{{ laf_notificationUrl }}";
 </script>
 {{ include('base/__script.html.twig') }}
