--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -5,7 +5,27 @@
 {% endblock %}
 
 {% block body %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 text-right">
+                <div class="custom-control custom-switch mb-2">
+                    <div class="d-flex justify-content-end">
+                        <span class="mr-5"><i class="fas fa-sun"></i></span>
+                        <input type="checkbox" class="custom-control-input switchDarkmode"
+                                {{ app.request.cookies.get('DARK_MODE') }}
+                                {% if app.request.cookies.get('DARK_MODE') is defined and app.request.cookies.get('DARK_MODE') == 1 %}
+                                    checked
+                                {% endif%}
+                               id="switchDarkmode2">
+                        <label class="custom-control-label" for="switchDarkmode2">
+                            <i class="fas fa-moon"></i>
+                        </label>
+                    </div>
 
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
 
 
@@ -66,8 +86,8 @@
             >
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <a href="{{ path('room_new') }}" class="loadContent">
-                            <div class="card card-body bg-success btn">
+                        <a href="{{ path('room_new') }}" class="loadContent dashboardBtn">
+                            <div class=" btn-block btn btn-dashboard">
                                 <p class="mt-2 mb-2 text-center">
                                     {{ 'Ein Event planen'|trans }}
                                 </p>
@@ -75,9 +95,9 @@
                         </a>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <a href="{{ path('schedule_admin_new') }}" class="loadContent">
-                            <div class="card card-body btn-outline-success btn ">
-                                <p class="mt-2 mb-2 text-center">
+                        <a href="{{ path('schedule_admin_new') }}" class="loadContent dashboardBtn">
+                            <div class=" btn-block btn btn-outline-dashboard">
+                                <p class="mt-2 mb-2 text-center ">
                                     {{ 'Einen Termin finden'|trans }}
                                 </p>
                             </div>
