--- a/templates/join/base.html.twig
+++ b/templates/join/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-{{ include('base/__head.html.twig') }}
+{% include'base/__head.html.twig' with {'css':'app'}  %}
 {% set image = pexelsImage() %}
 <body style="background-color: #C9C9C9">
 <div class="imageBackground"></div>
@@ -119,38 +119,7 @@
                         </div>
                     </div>
                 </div>
-                {% if standort and standort|roomsinFuture|length > 0 %}
-                    <div class="col-lg-10 mt-3">
-                        <div class="card frozenGlas">
-                            <div class="glossy"></div>
-                            <div class="card-body">
-                                <h3 class="h3-responsive text-center">{{ 'Öffentliche Events'|trans }}</h3>
-                                <div class="max-vh60">
-                                    <ul class="list-group">
 
-                                        {% for r in standort|roomsinFuture %}
-                                            <li class="list-group-item d-flex align-items-center justify-content-between">
-                                                <b>{{ r.start|date('d.m.Y | H:i') }}</b>
-                                                <h5>{{ r.name }} <a tabindex="0" data-toggle="popover"
-                                                                    data-trigger="focus"
-                                                                    title="{{ 'Agenda'|trans }}"
-                                                                    data-content="{% if r.agenda is not null %}{{ r.agenda|markdown_to_html|escape }}{% else %}{{ 'Keine Angabe'|trans }}{% endif %}"><i
-                                                                class="fa fa-info-circle"></i></a></h5>
-
-                                                {% if r.public %}
-                                                    <a href="{{ path('public_subscribe_participant',{'uid':r.uidParticipant}) }}"
-                                                       class="btn btn-sm btn-outline-primary">{{ 'Anmelden'|trans }}</a>
-                                                {% endif %}
-                                            </li>
-
-                                        {% endfor %}
-
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endif %}
             </div>
 
 
