--- a/templates/base/__newRoomModal.html.twig
+++ b/templates/base/__newRoomModal.html.twig
@@ -20,25 +20,26 @@
                     {{ form_row(form.agenda) }}
                 </div>
                 {% if form.start is defined %}
-                <div class="col-lg-12">
-                    {{ form_row(form.start) }}
-                </div>
+                    <div class="col-lg-12">
+                        {{ form_row(form.start) }}
+                    </div>
                 {% endif %}
                 <div class="col-lg-12">
                     {{ form_row(form.duration) }}
                 </div>
             </div>
             <div class="mb-2">
-                <a data-toggle="collapse" class=" caretdown" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <a data-toggle="collapse" class=" caretdown" href="#collapseExample" aria-expanded="false"
+                   aria-controls="collapseExample">
                     {{ 'Erweiterte Optionen'|trans }}
                 </a>
                 <div class="collapse" id="collapseExample">
                     <div class="mt-3">
                         <div class="row">
                             {% if form.scheduleMeeting is defined %}
-                            <div class="col-lg-12">
-                                {{ form_row(form.scheduleMeeting) }}
-                            </div>
+                                <div class="col-lg-12">
+                                    {{ form_row(form.scheduleMeeting) }}
+                                </div>
                             {% endif %}
 
                             <div class="col-lg-12">
@@ -50,6 +51,11 @@
                                 </div>
                                 <div class="col-lg-12">
                                     {{ form_row(form.waitinglist) }}
+                                </div>
+                                <div id="maxWaitinglist" class=" collapse">
+                                    <div class="col-lg-12">
+                                        {{ form_row(form.maxWaitingList) }}
+                                    </div>
                                 </div>
                             </div>
 
