--- a/templates/email/editRoom.html.twig
+++ b/templates/email/editRoom.html.twig
@@ -13,6 +13,12 @@
     <p>
       {% trans with {'{name}': room.name} %}  Das Event {name} wurde gerade geändert. {% endtrans %}
     </p>
-    {% include 'email/__roomInfo.html.twig' %}
 
+
+    {% include 'email/__roomInfo.html.twig' %}
+    <br>
+    <br>
+    <a href="{{ absolute_url(path('storno_index',{'uidUser':user.uid,'uidRoom':room.uid})) }}">
+        {{ 'Hier können Sie sich von dem Event abmelden'|trans }}
+    </a>
 {% endblock %}
