--- a/templates/room/attendeeModal.twig
+++ b/templates/room/attendeeModal.twig
@@ -22,93 +22,19 @@
             <div id="atendeeList">
                 <ul>
                     <li>{{ room.moderator.email }} <span class="small">({{ 'Organisator'|trans }})</span></li>
-                    {% for user in room.user %}
-                        {% if user != room.moderator %}
-                            <li>{{ user.email }}
-
-                                <a tabindex="0" data-toggle="popover" data-trigger="focus"
-                                   title="{{ user.firstName }} {{ user.lastName }}"
-                                   data-content="
-{{ 'Email'|trans }}: <a href='mailto:{{ user.email }}'>{{ user.email }}</a><br>
-                                {{ 'Telefon'|trans }}: <a href='tel:{{ user.phone }}'>{{ user.phone }}</a>"><i
-                                            class="fa fa-info-circle"></i></a>
-                                <a class="small directSend {% if roomPermissions(user,room).moderator == true %}text-success{% endif %}"
-                                   href="{{ path('room_add_moderator',{'room':room.id,'user':user.id}) }}"
-                                   data-text="
-{% if roomPermissions(user,room).moderator == false %}
-{{ 'Wollen Sie den Teilnehmer wirklich zum Moderator ernennen?'|trans }}
-{% else %}
-{{ 'Wollen Sie den Teilnehmer wirklich als  Moderator entfernen?'|trans }}
-{% endif %}
-"
-                                   data-target="#atendeeList"
-                                   data-url="{{ path('room_add_user',{'room':room.id}) }}"
-                                ><i class="fa fa-crown"></i></a>
-
-
-                                {% if room.dissallowScreenshareGlobal %}
-                                    <a class="small directSend {% if roomPermissions(user,room).shareDisplay == true %}text-success{% endif %}"
-                                       href="{{ path('change_permissions_screenShare',{'room':room.id,'user':user.id}) }}"
-                                       data-text="
-{% if roomPermissions(user,room).shareDisplay == false %}{{ 'Diesem Nutzer erlauben seinen Bildschirm zu teilen'|trans }}
-{% else %}
-{{ 'Diesem Nutzer nicht mehr erlauben seinen Bildschirm zu teilen'|trans }}
-{% endif %}
-"
-                                       data-target="#atendeeList"
-                                       data-url="{{ path('room_add_user',{'room':room.id}) }}"><i
-                                                class="fas fa-desktop"></i></a>
-                                {% endif %}
-
-
-
-                                {% if room.dissallowPrivateMessage %}
-                                    <a class="small directSend {% if roomPermissions(user,room).privateMessage == true %}text-success{% endif %}"
-                                       href="{{ path('change_permissions_privateMessage',{'room':room.id,'user':user.id}) }}"
-                                       data-text="
-{% if roomPermissions(user,room).privateMessage == false %}{{ 'Diesem Nutzer erlauben private Nachrichten an andere Teilnehmer zu senden'|trans }}
-{% else %}
-{{ 'Diesem Nutzer nicht mehr erlauben private Nachrichten an andere Teilnehmer zu senden'|trans }}
-{% endif %}
-"
-                                       data-target="#atendeeList"
-                                       data-url="{{ path('room_add_user',{'room':room.id}) }}"
-                                    ><i class="far fa-comments"></i></a>
-                                {% endif %}
-
-                                <a class="small confirmHref"
-                                   href="{{ path('room_user_remove',{'room':room.id,'user':user.id}) }}"><i
-                                            class="fa fa-trash"></i> </a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
+                    {% include 'room/__attendeeList.html.twig' with {'room':room} %}
                 </ul>
-
                 {% if room.waitinglists|length > 0 %}
-
                     <b>{{ 'Warteliste'|trans }}</b>
-                    <hr>
                     <ul>
-                        {% for w in room.waitinglists |sort((a, b) => a.createdAt <=> b.createdAt) %}
-                            <li>{{ w.user.email }}<a tabindex="0" data-toggle="popover" data-trigger="focus"
-                                                     title="{{ w.user.firstName }} {{ w.user.lastName }}"
-                                                     data-content="
-{{ 'Email'|trans }}: <a href='mailto:{{ w.user.email }}'>{{ w.user.email }}</a><br>
-                                {{ 'Telefon'|trans }}: <a href='tel:{{ w.user.phone }}'>{{ w.user.phone }}</a>"><i
-                                            class="fa fa-info-circle"></i></a>
-
-                                <a class="small directSend"
-                                   href="{{ path('accept_waitingList',{'id':w.id}) }}"
-                                   data-text="{{ 'Wollen Sie den Teilnehmer wirklich zu dem Event hinzufügen'|trans }}"
-                                   data-target="#atendeeList"
-                                   data-url="{{ path('room_add_user',{'room':room.id}) }}"
-                                >    <i class="fa fa-check"></i>
-                                </a>
-                            </li>
-                        {% endfor %}
+                        {% include 'room/__waitingList.html.twig' with {'room':room} %}
                     </ul>
-
-
+                {% endif %}
+                {% if room.storno|length > 0 %}
+                    <b>{{ 'Storniert'|trans }}</b>
+                    <ul>
+                        {% include 'room/__stornoList.html.twig' with {'room':room} %}
+                    </ul>
                 {% endif %}
             </div>
             <hr>
