--- a/templates/join/base.html.twig
+++ b/templates/join/base.html.twig
@@ -59,9 +59,9 @@
                             <div class="row">
                                 <div class="col-md-3 text-center text-md-left mb-2 mb-md-0"
                                      style="display: flex; justify-content: center; align-items: center">
-                                    {% if server is defined and  server is not null and server|validateLicense %}
-                                        {% if server.logoUrl is not null %}
-                                            <img src="{{ server.logoUrl }}" style="width: 100%">
+                                    {% if standort is defined and  standort is not null and standort|validateLicense %}
+                                        {% if standort.logoUrl is not null %}
+                                            <img src="{{ standort.logoUrl }}" style="width: 100%">
                                         {% endif %}
                                     {% else %}
                                         <img src="{{ asset('logo.png') }}" style="width: 100%">
