--- a/templates/servers/__serverModal.html.twig
+++ b/templates/servers/__serverModal.html.twig
@@ -35,6 +35,9 @@
                             </div>
 
                             <div class="col-md-4">
+                                <a href="{{ path('join_index',{'slug':s.slug}) }}" target="_blank">
+                                             {{ 'Meine Standort-Seite'|trans }}
+                                </a><br>
                                 {% if s.administrator == app.user %}
                                     {% if s|validateLicense %}
                                         <a href="{{ path('servers_enterprise',{'id':s.id}) }}" data-dismiss="modal"
@@ -46,11 +49,8 @@
                                             <span
                                                     class="badge badge-success">pro</span> {{ 'Teste SMTP'|trans }}</a>
                                         <br>
-                                        <a href="{{ path('join_index',{'slug':s.slug}) }}" target="_blank">
-                                            <span
-                                                    class="badge badge-success">pro</span> {{ 'Meine Join-Seite'|trans }}
-                                        </a>
-                                        <br>
+
+
                                     {% endif %}
                                 {% endif %}
                             </div>
@@ -66,7 +66,7 @@
                                        class="loadContent">{{ 'Statistiken'|trans }}</a>
                                     <br>
                                     <a href="{{ path('server_delete',{'id':s.id}) }}" data-dismiss="modal"
-                                       class="confirmHref">{{ 'Server löschen'|trans }}</a>
+                                       class="confirmHref">{{ 'Standort löschen'|trans }}</a>
 
                                 {% else %}
                                     {% if s in app.user.standort %}
