group is working now * set max limit of group * remove every group memeber * selfregister * add groupmembers

--- a/templates/base/__newRoomModal.html.twig
+++ b/templates/base/__newRoomModal.html.twig
@@ -57,6 +57,14 @@
                                         {{ form_row(form.maxWaitingList) }}
                                     </div>
                                 </div>
+                                <div class="col-lg-12">
+                                    {{ form_row(form.allowGroups) }}
+                                </div>
+                                <div id="maxGroupSize" class=" collapse">
+                                    <div class="col-lg-12">
+                                        {{ form_row(form.maxGroupSize) }}
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="col-lg-12">
