--- a/templates/room/__attendeeList.html.twig
+++ b/templates/room/__attendeeList.html.twig
@@ -1,5 +1,6 @@
 {% for user in room.user %}
-    {% if user != room.moderator %}
+
+    {% if user != room.moderator and atendeeIsInGroup(user,room) is null %}
         <li>{{ user.email }}
 
             <a tabindex="0" data-toggle="popover" data-trigger="focus"
@@ -55,6 +56,15 @@
             <a class="small confirmHref"
                href="{{ path('room_user_remove',{'room':room.id,'user':user.id}) }}"><i
                         class="fa fa-trash"></i> </a>
+            {% if userFromUsergroup(user,room)|length > 0 %}
+                <ul>
+                    {% for u in userFromUsergroup(user,room) %}
+                        <li>{{ u.email }} <a class="small confirmHref"
+                                            href="{{ path('room_user_remove',{'room':room.id,'user':u.id}) }}"><i
+                                        class="fa fa-trash"></i> </a></li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </li>
     {% endif %}
 {% endfor %}
