startpage now with login button

--- a/templates/dashboard/start.html.twig
+++ b/templates/dashboard/start.html.twig
@@ -1,7 +1,12 @@
 {% extends 'join/base.html.twig' %}
 {% set standort = null %}
 {% block header %}
-    <h1 class="h1-responsive text-center">{{ 'Kalender'|trans }}</h1>
+    <div class="row">
+        <div class="col-lg-12 ">
+            <h1 class="h1-responsive text-center">{{ 'Kalender'|trans }}</h1>
+
+        </div>
+    </div>
 
 {% endblock %}
 
