--- a/templates/join/base.html.twig
+++ b/templates/join/base.html.twig
@@ -8,7 +8,7 @@
 {% block back %}{% endblock %}
 <div>
     <div class="container mb-5">
-        <div class="pt-5">
+        <div class="pt-2">
 
 
             <style>
@@ -51,6 +51,11 @@
 
 
             </style>
+            <div class="row justify-content-center">
+                <div class="col-lg-10 d-flex justify-content-end">
+                    <a href="{{ path('dashboard') }}" class="btn btn-primary">{{ 'Login'|trans }}</a>
+                </div>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-lg-10 ">
                     <div class="card frozenGlas">
