--- a/templates/base/__newRoomModal.html.twig
+++ b/templates/base/__newRoomModal.html.twig
@@ -70,6 +70,9 @@
                             <div class="col-lg-12">
                                 {{ form_row(form.showRoomOnJoinpage) }}
                             </div>
+                            <div class="col-lg-12">
+                                {{ form_row(form.showRoomOnCalendar) }}
+                            </div>
 
                         </div>
                     </div>
