--- a/templates/dashboard/__roomDetails.html.twig
+++ b/templates/dashboard/__roomDetails.html.twig
@@ -24,7 +24,7 @@
         <span class="badge badge-warning">{{ 'Intern'|trans }}</span><br>
     {% endif %}
     {% if app.user == room.public %}
-        <span class="badge badge-danger">{{ 'Selstregistrierung'|trans }}</span><br>
+        <span class="badge badge-danger">{{ 'Selbstregistrierung'|trans }}</span><br>
     {% endif %}
 
 </div>
